Bacend bağlantıları oluşturuldu. API bağlantısı, modeller ve response temel gereklilikler oluşturldu. #1

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
         <form (ngSubmit)="onSubmit()">
             <div class="mb-2">
                 <label class="form-label"><i class="fas fa-id-card"></i> TC Kimlik No</label>
-                <input type="text" class="form-control" placeholder="TC Kimlik No" [(ngModel)]="loginObj.tcKimlik"
+                <input type="text" class="form-control" placeholder="TC Kimlik No" [(ngModel)]="loginObj.nationalityId"
                     name="tcKimlik" required>
             </div>
             <div class="mb-2">
