--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+--primary-color: #007bff;
+--background-color: rgb(8, 162, 80);
+--text-color: #333;
+}
