--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
     --primary-color: rgb(8, 162, 80);
     --secondary-color: rgb(35, 173, 100);
     --secondary-text-color: #666666;
-    --card-background-color: #ffffff;
+    --card-background-color: #ececec;
     --input-background-color: #ffffff;
     --input-hover-background-color: rgb(234, 250, 237);
     --primary-hover-color: rgb(6, 142, 70);
