--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,1 +1,18 @@
-<p>homepage works!</p>
+<div class="container mt-4">
+    <div class="row">
+      <div class="col-md-4 col-sm-6 col-12 mb-3" *ngFor="let card of cards">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ card.title }}</h5>
+            <p class="card-text">
+              <strong>Bölüm:</strong> {{ card.department }}<br>
+              <strong>Rol:</strong> {{ card.role }}<br>
+              <strong>Son Başvuru:</strong> {{ card.deadline }}
+            </p>
+            <a [routerLink]="card.detailsLink" class="btn btn-primary">Detayları Görüntüle</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
