--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -103,3 +103,21 @@ color: white;
       font-size: 16px;
    }
 }
+@media screen and (max-width: 991px) {
+    .navbar .nav-item {
+        margin: 5px 0;
+        width: 100%;
+        background-color: none  !important;
+    }
+    .navbar .nav-item .nav-link {
+        background-color: var(--primary-color) !important;
+        margin: 0 16px;
+    }
+
+    .navbar .nav-item 
+    .navbar .form-control {
+        width: 100%;
+        margin: auto;
+
+    }
+ }
