--- a/src/app/components/admin.dashboard/admin.dashboard.component.html
+++ b/src/app/components/admin.dashboard/admin.dashboard.component.html
@@ -1,4 +1,6 @@
 <!-- Responsive tabloya sahip bir div ile tabloyu saralım -->
+<h2 class="content-title">Dashboard</h2>
+
 <div class="admin-table-responsive">
   <table class="table admin-table">
     <thead>
