--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -14,8 +14,10 @@
           <h1><i class="fa-solid fa-user"></i> Profilim</h1>
           <p>Bu sayfada, size ait olan bilgileri ve başvurularınızı takip edebilirsiniz.</p>
           <ul class="list-group">
-            <li class="list-group-item">
-              <i class="fa-solid fa-id-card"></i> <strong> T.C. Kimlik:</strong> {{ userObj.nationalityId }}
+            <li class="list-group-item" (mouseenter)="userObj.showFullTc = true"
+            (mouseleave)="userObj.showFullTc = false">
+              <i class="fa-solid fa-id-card"></i> <strong> T.C. Kimlik:</strong> 
+              {{ userObj.nationalityId | tcMask:userObj.showFullTc }}
             </li>
             <li class="list-group-item">
               <i class="fa-solid fa-user"></i> <strong> İsim Soyisim:</strong> {{ userObj.firstName }} {{
